# Flights

./: .gitignore  README.md  additional_data.xlsx  airport_map.py  db.py  db_populate.py  flights_krk_May_7_23_12_last_7_days.csv  flights_ktw_May_7_23_27_last_7_days.csv  flights_wro_May_7_23_27_last_7_days.csv  main.py  populate.py  pyproject.toml  query_data.ipynb  request_airport_data.py  requests_hist_flights.py
csv_data/: flights_gdn_May_16-22.csv  flights_gdn_May_7_23_27_last_7_days.csv  flights_gdn_May_9-15.csv  flights_krk_May_16-22.csv  flights_krk_May_9-15.csv  flights_ktw_May_16-22.csv  flights_ktw_May_last_7_days.csv  flights_poz_May_16-22.csv  flights_poz_May_7_23_27_last_7_days.csv  flights_poz_May_9-15.csv  flights_waw_May_16-22.csv  flights_waw_May_7_23_24_last_7_days.csv  flights_waw_May_9-15.csv  flights_wro_May_16-22.csv  flights_wro_May_last_7_days.csv
csv_retrieved/: cleaned_flight_data.csv
models/: __init__.py  airline.py  airplane.py  airport.py  flight.py  flight_details.py
